# sysprog-workshop

./: Assignments.md  Checklist.md  Docker.md  GitAndGerritUsers.md  GitBasics.md  LICENSE  Linux.md  Memory.md  Notes.md  README.md  Setup.md
.github/workflows/: cmake-multi-platform.yml  update-toc.yml
cmake-demo/: README.md
cmake-demo/progwithtest/: cpphello.cpp  hello_test.cpp
cmake-demo/simple/: test.cpp
cmakedemo/: CMakeLists.txt  README.md  helloprint.cpp  helloprint.h
cmakedemo/simple/: CMakeLists.txt
gerrit-setup/: gerrit_instructions.md  git_instructions.md
git-demos/: git-clone-demo.cast  git-collaboration-demo.cast  git-config.cast  git-repo-setup.cast
perf-demo/: README.md  bottlenecks-mt.cpp  bottlenecks.cpp  cachegrind-output.txt  cpu-profiling.md
scripts/: create_accounts.py  create_gerrit_container.sh  create_projects.py  students.csv
valgrind-demo/: README.md  Valgrind.md  test.c
